# intent-code

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
commands/: code-index.md  code-note.md
hooks/: hooks.json  mark_dirty.py
src/intent_code/: __init__.py  agents.py  cast_chunk.py  cli.py  embedder_auto.py  githooks.py  graph.py  hook.py  index.py  intents.py  manifest.py  mcp_server.py  notes.py  parsing.py  protocol.py  walk.py
src/intent_code/eval/: __init__.py  harness.py  questions.py  run.py
tests/: conftest.py  test_agents.py  test_cli.py  test_comprehension.py  test_embedder_auto.py  test_eval.py  test_freshness.py  test_githooks.py  test_graph.py  test_hook.py  test_index_incremental.py  test_manifest.py  test_mcp_server.py  test_notes.py  test_parsing.py  test_repo_scope.py  test_walk.py
